--- a/package.json
+++ b/package.json
@@ -1,23 +1,50 @@
 {
-  "name": "nuxt-app",
-  "version": "0.0.1",
-  "license": "GPL-3.0-only",
-  "author": {
-    "name": "Jocian Mendonça",
-    "url": "https://github.com/tiny-core"
-  },
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "dependencies": {
-    "nuxt": "^3.11.2",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
-  }
+	"name": "nuxt-app",
+	"version": "0.0.1",
+	"license": "GPL-3.0-only",
+	"author": {
+		"name": "Jocian Mendonça",
+		"url": "https://github.com/tiny-core"
+	},
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"nuxt:build": "nuxi build --dotenv .env.production",
+		"nuxt:dev": "nuxi dev --dotenv .env",
+		"nuxt:generate": "nuxi generate --dotenv .env.production",
+		"nuxt:preview": "nuxt preview",
+		"dev": "tauri dev",
+		"postinstall": "nuxt prepare"
+	},
+	"dependencies": {
+		"@tauri-apps/api": "^1.5.4",
+		"@vee-validate/zod": "^4.12.6",
+		"filesize": "^10.1.1",
+		"nuxt": "^3.11.2",
+		"vue": "^3.4.26",
+		"vue-router": "^4.3.2",
+		"zod": "^3.23.5"
+	},
+	"devDependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.5.2",
+		"@fortawesome/free-brands-svg-icons": "^6.5.2",
+		"@fortawesome/free-regular-svg-icons": "^6.5.2",
+		"@fortawesome/free-solid-svg-icons": "^6.5.2",
+		"@fortawesome/vue-fontawesome": "^3.0.6",
+		"@nuxtjs/eslint-config-typescript": "^12.1.0",
+		"@nuxtjs/eslint-module": "^4.1.0",
+		"@nuxtjs/i18n": "^8.3.1",
+		"@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+		"@pinia/nuxt": "^0.5.1",
+		"@tauri-apps/cli": "^1.5.12",
+		"@vee-validate/nuxt": "^4.12.6",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"nuxt-meilisearch": "^1.1.0",
+		"nuxt-typed-router": "^3.6.3",
+		"nuxt-zod-i18n": "^1.6.0",
+		"prettier": "^3.2.5",
+		"sass": "^1.76.0",
+		"vuetify-nuxt-module": "^0.13.4"
+	}
 }
