--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"nuxt:generate": "nuxi generate --dotenv .env.production",
 		"nuxt:preview": "nuxt preview",
 		"dev": "tauri dev",
+		"build": "tauri build",
 		"postinstall": "nuxt prepare"
 	},
 	"dependencies": {
