correction in pnpm installation command

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,7 +56,7 @@ jobs:
           Import-PfxCertificate -FilePath certificate/certificate.pfx -CertStoreLocation Cert:\CurrentUser\My -Password (ConvertTo-SecureString -String $env:WINDOWS_CERTIFICATE_PASSWORD -Force -AsPlainText)
 
       - name: install app dependencies and build it
-        run: pnpm && pnpm build
+        run: pnpm install && pnpm build
 
       - uses: tauri-apps/tauri-action@v0
         env:
